--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/de6772e16a.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a133fbfca8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./theme.css">
 </head>
 
@@ -88,10 +88,10 @@
                     <span class="mb-3 mb-md-0 text-light">© 2023 The Chess Tree | by TKDEV</span>
                 </div>
 
-                <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-                    <li class="ms-3"><a class="text-light" href="#"><i class="fa-solid fa-angle-up text-primary"></i></a></li>
-                    <li class="ms-3"><a class="text-light" href="https://github.com/tomasKubicek/thechesstree" target="_blank"><i class="fa-brands fa-github text-primary"></i></a></li>
-                    <li class="ms-3"><a class="text-light" href="https://www.instagram.com/kubanec_tomanec/" target="_blank"><i class="fa-brands fa-instagram text-primary"></i></a></li>
+                <ul class="nav col-md-4 justify-content-end list-unstyled d-flex fs-4">
+                    <li class="ms-3"><a class="text-light" href="#"><i class="fas fa-angle-up text-primary"></i></a></li>
+                    <li class="ms-3"><a class="text-light" href="https://github.com/tomasKubicek/thechesstree" target="_blank"><i class="fab fa-github text-primary"></i></a></li>
+                    <li class="ms-3"><a class="text-light" href="https://www.instagram.com/kubanec_tomanec/" target="_blank"><i class="fab fa-instagram text-primary"></i></a></li>
                 </ul>
             </footer>
         </div>
