--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link link-light dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Databáze</a>
                         <ul class="dropdown-menu dropdown-menu-dark">
+                            <li><a class="dropdown-item" href="./db/databaze.html">Přehled</a></li>
                             <li><a class="dropdown-item" href="./db/otevreni.html">Otevření</a></li>
                             <li><a class="dropdown-item" href="./db/koncovky.html">Koncovky</a></li>
-                            <li><a class="dropdown-item" href="./db/kontribuce.html">Kontribuce</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a href="https://github.com/tomasKubicek/thechesstree" target="_blank" class="nav-link link-light px-2">GitHub</a></li>
@@ -45,12 +45,12 @@
         <div class="mask py-5" style="background-color: rgba(0, 16, 0, 0.6); height: 100vh;">
             <div class="container d-flex justify-content-center align-items-center h-100">
                 <div class="text-white">
-                    <h1 class="mb-3">Komunitní Šachová Databáze</h1>
-                    <h5 class="mb-4">
+                    <h1 class="display-5 fw-bold lh-1 mb-4">Komunitní Šachová Databáze</h1>
+                    <h5 class="my-4">
                         The Chess Tree je otevřená komunitní databáze šachových otevření a koncovek. <br> Databázi můžete prozkoumat, nebo přispět svým vlastním otevřením nebo koncovkou.
                     </h5>
                     <div class="d-flex flex-column justify-content-center align-content-center flex-sm-row">
-                        <a class="btn btn-outline-light btn-lg m-2 px-4" href="./database.html" role="button" rel="nofollow">Prozkoumat databázi</a>
+                        <a class="btn btn-outline-light btn-lg m-2 px-4" href="./db/databaze.html" role="button" rel="nofollow">Prozkoumat databázi</a>
                         <a class="btn btn-outline-light btn-lg m-2 px-4" href="#about" role="button">O projektu</a>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
                 <h1 class="display-5 fw-bold lh-1 mb-3">O projektu</h1>
                 <p class="py-3">
                     Tato stránka byla vytvořena jako projekt do školy a jako užitečný nástroj pro každého, kdo se zajímá o šachy. <br> Tato databáze obsahuje přesné informace o různých šachových otevřeních a koncovkách, což vám pomůže lépe porozumět hře
-                    a zlepšit vaše šachové schopnosti. <br> Databáze je navíc snadno ovladatelná a přehledná, což vám umožní rychle najít informace, které potřebujete. Díky spolupráci s GitHubem můžete být ujištěni, že naše data jsou vždy aktuální a spolehlivé.
+                    a zlepšit vaše šachové schopnosti. <br> Databáze je navíc snadno ovladatelná a přehledná, což vám umožní rychle najít informace, které potřebujete. Díky využítí GitHubu můžete být ujištěni, že naše data jsou vždy aktuální a spolehlivé.
                     <br>
                 </p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
