--- a/oprojektu.html
+++ b/oprojektu.html
@@ -36,9 +36,9 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link link-light dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Databáze</a>
                         <ul class="dropdown-menu dropdown-menu-dark">
+                            <li><a class="dropdown-item" href="./db/databaze.html">Přehled</a></li>
                             <li><a class="dropdown-item" href="./db/otevreni.html">Otevření</a></li>
                             <li><a class="dropdown-item" href="./db/koncovky.html">Koncovky</a></li>
-                            <li><a class="dropdown-item" href="./db/kontribuce.html">Kontribuce</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a href="https://github.com/tomasKubicek/thechesstree" target="_blank" class="nav-link link-light px-2">GitHub</a></li>
@@ -56,8 +56,8 @@
                     <h2 class="display-5 fw-bold lh-1 mb-3">O projektu</h2>
                     <p class="py-3">
                         Tato stránka byla vytvořena jako projekt do školy a jako užitečný nástroj pro každého, kdo se zajímá o šachy. <br> Tato databáze obsahuje přesné informace o různých šachových otevřeních a koncovkách, což vám pomůže lépe porozumět
-                        hře a zlepšit vaše šachové schopnosti. <br> Databáze je navíc snadno ovladatelná a přehledná, což vám umožní rychle najít informace, které potřebujete. Díky spolupráci s GitHubem můžete být ujištěni, že naše data jsou vždy aktuální
-                        a spolehlivé.
+                        hře a zlepšit vaše šachové schopnosti. <br> Databáze je navíc snadno ovladatelná a přehledná, což vám umožní rychle najít informace, které potřebujete. Díky využítí GitHubu můžete být ujištěni, že naše data jsou vždy aktuální a
+                        spolehlivé.
                         <br>
                     </p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
