--- a/db/otevreni.html
+++ b/db/otevreni.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a133fbfca8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../theme.css">
+    <link rel="stylesheet" href="../assets/css/chessboard.css">
     <link rel="stylesheet" href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css" integrity="sha384-q94+BZtLrkL1/ohfjR8c6L+A6qzNH9R2hBLwyoAfu3i/WCvQjzL2RQJ3uNHDISdU" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js" integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD" crossorigin="anonymous"></script>
@@ -27,7 +28,7 @@
 
 
 <body class="bg-dark">
-    <nav class="navbar navbar-expand-md navbar-dark text-light bg-transparent py-0 position-fixed w-100 top-0 start-0 py-sm-3">
+    <nav class="navbar z-3 navbar-expand-md navbar-dark text-light bg-transparent py-0 position-fixed w-100 top-0 start-0 py-sm-3">
         <!-- "position-fixed" dělá to stejné jako sticky, jen nevytváří static mezeru, jinak bych použil "position-sticky" nebo "sticky-top" -->
         <div class="container d-flex flex-wrap flex-row justify-content-between bg-primary rounded-5 px-5 py-1" id="navcontainer">
             <a class="navbar-brand fs-3" href="#">♙ The Chess Tree</a>
@@ -54,10 +55,17 @@
     </nav>
     <div class="bg-secondary">
         <div class="container col-xxl-8 px-4 py-5 bg-secondary text-light" id="about">
-            <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+            <div class="row flex-lg-row-reverse align-items-center g-5 py-5 position-relative">
                 <div class="text-center pt-5">
-                    <h2 class="display-5 fw-bold lh-1 mb-3">Šachová otevření</h2>
+                    <h2 class="display-5 fw-bold lh-1 mb-3 mt-4">Šachová otevření</h2>
+                    <p>Zde naleznete komunitní databázi šachových otevření. </p>
                 </div>
+                <a class="position-absolute top-50 end-0 w-auto d-flex flex-column justify-content-center align-items-center link-light text-decoration-none" href="./databaze.html#jakprispet">
+                    <div class="feature-icon-small d-inline-flex align-items-center justify-content-center bg-primary rounded-3">
+                        <i class="fas fa-plus fs-4"></i>
+                    </div>
+                    <span class="w-auto">Přidat otevření</span>
+                </a>
             </div>
         </div>
     </div>
@@ -80,7 +88,9 @@
             window.setTimeout(makeRandomMove, Math.random() * 500 + 200)
         }
 
-        board = Chessboard('board', 'start')
+        board = Chessboard('board', {
+            position: 'start'
+        })
 
         window.setTimeout(makeRandomMove, 500)
     </script>
