--- a/db/otevreni.html
+++ b/db/otevreni.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TheChessTree | Šachová databáze</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.1.0/js-yaml.min.js" integrity="sha512-CSBhVREyzHAjAFfBlIBakjoRUKp5h7VSweP0InR/pAJyptH7peuhCsqAI/snV+TwZmXZqoUklpXp6R6wMnYf5Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
@@ -71,75 +72,15 @@
     </div>
 
 
-    <div class="album py-5 bg-body-tertiary">
+    <div class="album py-5 bg-dark">
         <div class="container">
-            <div class="row row-cols-1 row-cols-sm-3 row-cols-md-4 g-3">
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <div id="board"></div>
-                        <div class="card-body">
-                            <p class="card-text fs-3 fw-bold">Francouzská obrana.</p>
-                            <p>Bílého se snaží zaútočit na střed, černý mezitím stavní zeď pěšců.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-                        <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-                        <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                    </div>
-                </div>
+            <div class="row row-cols-1 row-cols-sm-3 row-cols-md-4 g-3 px-1" id="openings">
             </div>
         </div>
     </div>
 
-    <script>
-        const openings = []
+    <script defer src="./js/displayopenings.js"></script>
 
-        function reqListener() {
-            console.log(this);
-        }
-
-        const req = new XMLHttpRequest();
-        req.addEventListener("load", reqListener);
-        req.open("GET", "https://tomaskubicek.github.io/thechesstree/otevreni.txt");
-        req.send();
-    </script>
-
-    <script defer>
-        var board = null
-        var game = new Chess()
-
-        function makeRandomMove() {
-            var possibleMoves = game.moves()
-            console.log(possibleMoves);
-
-            // exit if the game is over
-            if (game.game_over()) return
-
-            var randomIdx = Math.floor(Math.random() * possibleMoves.length)
-            game.move(possibleMoves[randomIdx])
-            board.position(game.fen())
-
-            window.setTimeout(makeRandomMove, Math.random() * 500 + 200)
-        }
-
-        board = Chessboard('board', {
-            position: 'start'
-        })
-
-        window.setTimeout(makeRandomMove, 500)
-    </script>
     </header>
     <div class="bg-secondary border-top border-2 " style="border-color: rgba(var(--bs-light-rgb), 0.1); ">
         <div class="container ">
