--- a/db/otevreni.html
+++ b/db/otevreni.html
@@ -54,14 +54,14 @@
             </div>
         </div>
     </nav>
-    <div class="bg-secondary">
+    <section class="bg-secondary">
         <div class="container col-xxl-8 px-4 py-5 bg-secondary text-light" id="about">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5 position-relative">
                 <div class="text-center pt-5">
                     <h2 class="display-5 fw-bold lh-1 mb-3 mt-4">Šachová otevření</h2>
                     <p>Zde naleznete komunitní databázi šachových otevření. </p>
                 </div>
-                <a class="position-absolute top-50 end-0 w-auto d-flex flex-column justify-content-center align-items-center link-light text-decoration-none" href="./databaze.html#jakprispet">
+                <a class="position-absolute top-50 mt-sm-5 end-0 w-auto d-md-flex d-none flex-column justify-content-center align-items-center link-light text-decoration-none" href="./databaze.html#jakprispet">
                     <div class="feature-icon-small d-inline-flex align-items-center justify-content-center bg-primary rounded-3">
                         <i class="fas fa-plus fs-4"></i>
                     </div>
@@ -69,15 +69,15 @@
                 </a>
             </div>
         </div>
-    </div>
+    </section>
 
 
-    <div class="album py-5 bg-dark">
+    <section class="album py-5 bg-dark">
         <div class="container">
-            <div class="row row-cols-1 row-cols-sm-3 row-cols-md-4 g-3 px-1" id="openings">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3 px-1" id="openings">
             </div>
         </div>
-    </div>
+    </section>
 
     <script defer src="./js/displayopenings.js"></script>
 
