--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </nav>
 
-    <div id="hero" class="text-center bg-image" style="background-image: url('./assets/heroboard.jpg'); background-size: cover; background-position: center center;">
+    <section id="hero" class="text-center bg-image" style="background-image: url('./assets/heroboard.jpg'); background-size: cover; background-position: center center;">
         <div class="mask py-5" style="background-color: rgba(0, 16, 0, 0.6); height: 100vh;">
             <div class="container d-flex justify-content-center align-items-center h-100">
                 <div class="text-white">
@@ -56,9 +56,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="container col-xxl-8 px-4 py-5 bg-dark text-light" id="about">
+    <section class="container col-xxl-8 px-4 py-5 bg-dark text-light" id="about">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-3">
                 <img src="./assets/chessopening.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" loading="lazy" width="700" height="500">
@@ -76,7 +76,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     </header>
     <div class="bg-secondary border-top border-2" style="border-color: rgba(var(--bs-light-rgb), 0.1);">
         <div class="container">
