--- a/oprojektu.html
+++ b/oprojektu.html
@@ -46,7 +46,7 @@
             </div>
         </div>
     </nav>
-    <div class="bg-secondary">
+    <section class="bg-secondary">
         <div class="container col-xxl-8 px-4 py-5 bg-secondary text-light" id="about">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                 <div class="col-10 col-sm-8 col-lg-3">
@@ -67,8 +67,8 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="bg-dark">
+    </section>
+    <section class="bg-dark">
         <div class="container col-xxl-8 px-4 py-5 text-light bg-dark">
             <h2 class="display-5 fw-bold lh-1 mb-3">Vývoj</h2>
 
@@ -116,7 +116,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     </header>
     <div class="bg-secondary border-top border-2 " style="border-color: rgba(var(--bs-light-rgb), 0.1); ">
         <div class="container ">
