--- a/db/detail.html
+++ b/db/detail.html
@@ -67,8 +67,8 @@
 
 
     <article>
-        <div class="container col-xxl-8 px-4 py-5 bg-dark text-light d-flex flex-row" id="about">
-            <div class="board col-4">
+        <div class="container col-xxl-8 px-4 py-5 bg-dark text-light d-flex flex-md-row flex-column" id="about">
+            <div class="board col-md-4">
                 <div id="board"></div>
                 <div class="controls d-flex flex-row justify-content-center py-2">
                     <button id="tostart" class="btn btn-outline-primary mx-2" id="startBtn"><i class="fas fa-fast-backward"></i></button>
@@ -76,7 +76,7 @@
                     <button id="forwards" class="btn btn-outline-primary mx-2" id="clearBtn"><i class="fas fa-chevron-right"></i></button>
                 </div>
             </div>
-            <div class="content col-8 ps-5">
+            <div class="content col-md-8 ps-5">
                 <h2 id="gamename" class="display-6 fw-bold"></h2>
                 <p id="gamedesc" class="fs-5 fw-light"></p>
                 <p id="gamemoves" class="fs-5 fw-light pt-4 mb-1"></p>
