--- a/db/otevreni.html
+++ b/db/otevreni.html
@@ -32,7 +32,7 @@
     <nav class="navbar z-3 navbar-expand-md navbar-dark text-light bg-transparent py-0 position-fixed w-100 top-0 start-0 py-sm-3">
         <!-- "position-fixed" dělá to stejné jako sticky, jen nevytváří static mezeru, jinak bych použil "position-sticky" nebo "sticky-top" -->
         <div class="container d-flex flex-wrap flex-row justify-content-between bg-primary rounded-5 px-5 py-1" id="navcontainer">
-            <a class="navbar-brand fs-3" href="#">♙ The Chess Tree</a>
+            <a class="navbar-brand fs-3" href="../index.html">♙ The Chess Tree</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainnav" aria-controls="mainnav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
