--- a/oprojektu.html
+++ b/oprojektu.html
@@ -24,7 +24,7 @@
     <nav class="navbar z-3 navbar-expand-md navbar-dark text-light bg-transparent py-0 position-fixed w-100 top-0 start-0 py-sm-3">
         <!-- "position-fixed" dělá to stejné jako sticky, jen nevytváří static mezeru, jinak bych použil "position-sticky" nebo "sticky-top" -->
         <div class="container d-flex flex-wrap flex-row justify-content-between bg-primary rounded-5 px-5 py-1" id="navcontainer">
-            <a class="navbar-brand fs-3" href="#">♙ The Chess Tree</a>
+            <a class="navbar-brand fs-3" href="./index.html">♙ The Chess Tree</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainnav" aria-controls="mainnav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -61,8 +61,8 @@
                         <br>
                     </p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                        <a type="button" class="btn btn-outline-primary btn-lg px-4 me-md-2">Prozkoumat</a>
-                        <a type="button" class="btn btn-outline-light btn-lg px-4">Přispět do projektu</a>
+                        <a type="button" class="btn btn-outline-primary btn-lg px-4 me-md-2" href="./db/databaze.html">Prozkoumat</a>
+                        <a type="button" class="btn btn-outline-light btn-lg px-4" href="./db/databaze.html#jakprispet">Přispět do projektu</a>
                     </div>
                 </div>
             </div>
