--- a/db/databaze.html
+++ b/db/databaze.html
@@ -124,7 +124,7 @@
                     <form>
                         <div class="mb-3">
                             <label for="inputname" class="form-label">Jméno a Příjmení</label>
-                            <input type="email" class="form-control" id="inputname">
+                            <input type="text" class="form-control" id="inputname">
                         </div>
                         <div class="mb-3">
                             <label for="inputemail" class="form-label">Email</label>
@@ -152,10 +152,10 @@
                     <span class="mb-3 mb-md-0 text-light ">© 2023 The Chess Tree | by TKDEV</span>
                 </div>
 
-                <ul class="nav col-md-4 justify-content-end list-unstyled d-flex fs-4 ">
-                    <li class="ms-3 "><a class="text-light " href="# "><i class="fas fa-angle-up text-primary "></i></a></li>
-                    <li class="ms-3 "><a class="text-light " href="https://github.com/tomasKubicek/thechesstree " target="_blank "><i class="fab fa-github text-primary "></i></a></li>
-                    <li class="ms-3 "><a class="text-light " href="https://www.instagram.com/kubanec_tomanec/ " target="_blank "><i class="fab fa-instagram text-primary "></i></a></li>
+                <ul class="nav col-md-4 justify-content-end list-unstyled d-flex fs-4">
+                    <li class="ms-3 "><a class="text-light " href="#"><i class="fas fa-angle-up text-primary "></i></a></li>
+                    <li class="ms-3 "><a class="text-light " href="https://github.com/tomasKubicek/thechesstree" target="_blank "><i class="fab fa-github text-primary "></i></a></li>
+                    <li class="ms-3 "><a class="text-light " href="https://www.instagram.com/kubanec_tomanec/" target="_blank "><i class="fab fa-instagram text-primary "></i></a></li>
                 </ul>
             </footer>
         </div>
