--- a/oprojektu.html
+++ b/oprojektu.html
@@ -109,8 +109,8 @@
                             <div class="feature-icon-small d-inline-flex align-items-center justify-content-center bg-primary fs-4 rounded-3 ">
                                 <i class="fab fa-js"></i>
                             </div>
-                            <h4 class="fw-semibold mb-0 ">JavaScript</h4>
-                            <p>JavaScript je využíván pro zobrazení koncovek, otevření a šachové desky.</p>
+                            <h4 class="fw-semibold mb-0 ">Chessboard.js, chess.js</h4>
+                            <p>Chessboard.js a chess.js je používán k zobrazení šachovnice a pohybu figur.</p>
                         </div>
                     </div>
                 </div>
