--- a/db/databaze.html
+++ b/db/databaze.html
@@ -106,7 +106,7 @@
                         <li>Najděte si otevření nebo koncovku, kterou budete chtít přidat.</li>
                         <li>Vytvořte buď v "/data/otevreni/" nebo v "/data/koncovky/" soubor s příponou ".yml"</li>
                         <li>Zkopírujte si šablonu "/data/template.yml" do souboru a vyplňte ji.</li>
-                        <li>Pošlete Pull Request do originální repositáře. Váš soubor se v databázi zobrazí, jakmile spojím váš pull request.</li>
+                        <li>Pošlete Pull Request do originálního repositáře. Váš soubor se v databázi zobrazí, jakmile spojím váš Pull Request.</li>
                     </ol>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start mt-4">
                         <a type="button" class="btn btn-outline-primary btn-lg px-4 me-md-2" href="https://github.com/tomasKubicek/thechesstree">Otevřít GitHub</a>
@@ -120,7 +120,7 @@
         <div class="container col-xxl-8 px-4 py-5 text-light" id="jakprispet">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                 <div class="pt-5">
-                    <h2 class="display-5 fw-bold lh-1 mb-3">Kontakt (prozatím nefunkční)</h2>
+                    <h2 class="display-5 fw-bold lh-1 mb-3">Kontakt (zatím nefunkční)</h2>
                     <form>
                         <div class="mb-3">
                             <label for="inputname" class="form-label">Jméno a Příjmení</label>
