--- a/db/koncovky.html
+++ b/db/koncovky.html
@@ -61,7 +61,7 @@
                     <h2 class="display-5 fw-bold lh-1 mb-3 mt-4">Šachové koncovky</h2>
                     <p>Zde naleznete komunitní databázi šachových koncovky. </p>
                 </div>
-                <a class="position-absolute top-50 end-0 w-auto d-flex flex-column justify-content-center align-items-center link-light text-decoration-none" href="./databaze.html#jakprispet">
+                <a class="position-absolute top-50 mt-sm-5 end-0 w-auto d-md-flex d-none flex-column justify-content-center align-items-center link-light text-decoration-none" href="./databaze.html#jakprispet">
                     <div class="feature-icon-small d-inline-flex align-items-center justify-content-center bg-primary rounded-3">
                         <i class="fas fa-plus fs-4"></i>
                     </div>
