--- a/oprojektu.html
+++ b/oprojektu.html
@@ -76,7 +76,7 @@
                 <div class="col d-flex flex-column align-items-start gap-2">
                     <h3 class="fw-bold">Jak tato stránka funguje?</h3>
                     <p>Tato stránka musí být někde uložená a jako školní projekt má nějaké požadavky na použité prostředky. </p>
-                    <a href="#" class="btn btn-outline-primary btn-lg">Zobrazit na GitHubu</a>
+                    <a href="https://github.com/tomasKubicek/thechesstree" class="btn btn-outline-primary btn-lg">Zobrazit na GitHubu</a>
                 </div>
 
                 <div class="col">
