--- a/db/databaze.html
+++ b/db/databaze.html
@@ -117,7 +117,7 @@
     </section>
 
     <section class="bg-dark">
-        <div class="container col-xxl-8 px-4 py-5 text-light" id="jakprispet">
+        <div class="container col-xxl-8 px-4 py-5 text-light">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                 <div class="pt-5">
                     <h2 class="display-5 fw-bold lh-1 mb-3">Kontakt (zatím nefunkční)</h2>
